@@ -9,22 +9,29 @@ import java.io.IOException;
 
 public class MainApp extends Application
 {
-    static _02_javafx.MainController controller = new MainController();
+/*
+ Folgende Zeile in die VM-Optionen der "Run Configuration" der aktuellen MainApp hinzufügen:
+   --module-path \path\to\javafx-sdk-19\lib --add-modules=javafx.controls,javafx.fxml
+ */
 
     public static void main(String[] args)
     {
         launch(args);
-        controller.personErfassen();
-
-        System.out.println("\n\nEnd of Main..");
     }
+
     @Override
-    public void start( Stage stage ) throws IOException {
+    public void start(Stage stage) throws IOException
+    {
         FXMLLoader fxmlLoader = new FXMLLoader(MainApp.class.getResource("Main.fxml"));
-        Scene scene = new Scene(fxmlLoader.load(), 320, 240);
-        stage.setTitle("Fenster-Titel");
+        Scene scene = new Scene(fxmlLoader.load());
+
+        //Parent root = FXMLLoader.load(getClass().getResource("Main.fxml"));
+        //Scene scene = new Scene(root);
+
+        stage.setTitle("My First JavaFX Application");
         stage.setScene(scene);
         stage.show();
 
     }
 }
+
